--- a/Backend/Geoportal.Web/Pages/Reports/New.cshtml
+++ b/Backend/Geoportal.Web/Pages/Reports/New.cshtml
@@ -1,4 +1,5 @@
 @page
+@using Geoportal.Web.Pages.Reports
 @model Geoportal.Web.Pages.Reports.NewModel
 @{
     ViewData["Title"] = "Оставить сообщение";
